--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,2 +1,10 @@
 <h1>Flats#index</h1>
 <p>Find me in app/views/flats/index.html.erb</p>
+
+<div class="cards d-flex justify-content-around">
+  <% @flats.each do |flat| %>
+    <div class="card-category">
+    <h1><%= link_to flat.name, flat_path(flat) %></h1>
+    </div>
+  <% end %>
+</div>
