--- a/app/views/flats/_form.html.erb
+++ b/app/views/flats/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for booking do |f| %>
+<%= simple_form_for [@flat, @booking] do |f| %>
   <%= f.input :start_date %>
   <%= f.input :end_date %>
   <%= f.submit %>
