--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,10 +1,22 @@
-<h1>Flats#index</h1>
-<p>Find me in app/views/flats/index.html.erb</p>
+<h1>Your flats</h1>
+<p>Find your creepy home</p>
 
-<div class="cards d-flex justify-content-around">
+<div class="cards">
   <% @flats.each do |flat| %>
-    <div class="card-category">
-    <h1><%= link_to flat.name, flat_path(flat) %></h1>
+  <div clas="card-category">
+    <div >
+      <img class="card-img-top" src="<%=flat.image_url%>" alt="">
     </div>
+    <div class="card-body d-flex justify-content-between">
+      <div>
+        <h6 class="title mb-3"><%= link_to flat.name, flat_path(flat) %></h6>
+        <p class="card-address"><%= flat.address%></p>
+      </div>
+      <div class="text-right">
+        <p><%= flat.max_people %></p>
+        <p><%= flat.price %></p>
+      </div>
+    </div>
+  </div>
   <% end %>
 </div>
