--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
   </head>
 
   <body>
-    <%= render 'shared/navbar' %>
+    <div>
+      <%= render 'shared/navbar' %>
+    </div>
     <%= render "shared/flashes" %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
