--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -29,3 +29,9 @@
 .navbar-lewagon .navbar-brand img {
   filter: grayscale(100%);
 }
+
+
+// Offset size of navbar on Index
+.margin-top-index {
+  margin-top: 120px;
+}
