--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,13 @@
     <div>
       <%= render 'shared/navbar' %>
     </div>
-    <%= render "shared/flashes" %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <div class="content">
-    <%= yield %>
+    <div class="container">
+      <%= render "shared/flashes" %>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+      <div class="content">
+        <%= yield %>
+      </div>
     </div>
     <%= render "shared/footer" %>
   </body>
