ajout du format bouton scss

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
+<div class="container">
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+<button class="btn-ghost">
+<%= link_to "To the houses", flats_path %>
+</button>
+</div>
