--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,10 +5,10 @@
   justify-content: space-between;
   padding: 0px 50px;
   color: rgb(246, 243, 243);
-  // position: fixed;
-  // bottom:0;  /* on le colle en bas */
-  width:100%;
-  height:100px;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height:100%;
 }
 
 
