--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,6 +1,8 @@
 .avatar {
-  width: 40px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
+  object-fit: contain;
 }
 .avatar-large {
   width: 56px;
