home page and search bar first version

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,6 +5,7 @@
   width: 100%;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
   height: 100%;
+  margin: 0;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -32,5 +33,5 @@
 
 // Offset size of navbar on Index
 .margin-top-index {
-  margin-top: 120px;
+  margin-top: 100px;
 }
