--- a/app/views/flats/new.html.erb
+++ b/app/views/flats/new.html.erb
@@ -1,2 +1,4 @@
-<h1>Flats#new</h1>
-<p>Find me in app/views/flats/new.html.erb</p>
+<div class="container">
+  <h1>Flats#new</h1>
+  <p>Find me in app/views/flats/new.html.erb</p>
+</div>
