--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,5 +1,5 @@
 .card-category {
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: 0 0 15px rgba(196, 12, 12, 0.69);
   background-size: cover;
 
   // background-position: center;
@@ -21,8 +21,9 @@
 
 .title a {
   text-decoration: none;
-  color: black;
+  color: white;
   font-weight: bold;
+  font-size: 24px;
 }
 
 .cards {
