--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,81 @@
 // Specific CSS for your home-page
+.banner {
+  background-size: cover;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  padding: 150px 0;
+  min-height: 80vh;
+  margin: 0;
+}
+
+.banner h1 {
+  margin: 0;
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-size: 32px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.banner p {
+  font-size: 20px;
+  color: white;
+  opacity: .7;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+
+.search-bar {
+  display: flex;
+  align-items: center;
+  max-width: 500px;
+  margin: 20px auto;
+  background-color:rgb(9, 9, 9);
+  border-radius: 20px;
+  padding: 10px;
+  box-shadow: 0 2px 5px rgba(197, 30, 30, 0.3);
+}
+
+.search-bar input[type="text"] {
+  flex-grow: 1;
+  border: none;
+  padding: 5px;
+  font-size: 16px;
+  border-radius: 5px;
+  color: black;
+}
+
+.search-bar button {
+  border: solid white;
+  padding: 5px 10px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+  margin-left: 10px;
+}
+
+.search-bar button:hover {
+  background-color: #e2e2e2;
+  color: white;
+}
+
+
+
+
+// style body
+body {
+  min-height: 100vh;
+  background-color: black;
+  color: white;
+}
+
+// style body
+html {
+  min-height: 100vh;
+}
+
+.app-content {
+  width: 100%;
+  height: 100%;
+}
