--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -8,14 +8,9 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  // height:100%;
+  height:10vh;
 }
 
-
-.app-content {
-  flex: 1;
-  margin-bottom: 60px;
-}
 
 .footer-links {
   display: flex;
