--- a/app/assets/stylesheets/components/_form_airbnb.scss
+++ b/app/assets/stylesheets/components/_form_airbnb.scss
@@ -1,34 +1,53 @@
-.airbnb-container {
-  max-width: 400px;
+/* Container du formulaire */
+.form-container {
+  width: 400px;
   margin: 0 auto;
+  padding: 20px;
+  height: 300px;
+  box-shadow: 0 0 15px rgba(196, 12, 12, 0.69);
+  background-color: #f7f7f7;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  p {
+    color: black;
+  }
 }
 
-.airbnb-container .form-group {
-  margin-bottom: 20px;
-}
-
-.airbnb-container label {
-  display: block;
-  font-weight: bold;
-  margin-bottom: 5px;
-}
-
-.airbnb-container input[type="text"],
-.airbnb-container input[type="date"],
-.airbnb-container input[type="submit"] {
+/* Style des champs de formulaire */
+.form-container input[type="text"],
+.form-container input[type="date"] {
   width: 100%;
   padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
+  border-radius: 3px;
 }
 
-.airbnb-container input[type="submit"] {
-  background-color: #ff5a5f;
+/* Style du bouton de soumission avec des flammes en arrière-plan */
+.form-container input[type="submit"] {
+  width: 100%;
+  padding: 10px;
+  background-color: transparent;
+  background-image: url('https://media.istockphoto.com/id/113494458/fr/photo/feu-isol%C3%A9-sur-fond-noir.jpg?s=612x612&w=0&k=20&c=X7bmZoA0IggGE6-WdqrEfzaLTIlqgIlG2vecunwmvWs=');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border: none;
   color: #fff;
+  font-size: 16px;
   font-weight: bold;
   cursor: pointer;
+  border-radius: 10px;
 }
 
-.airbnb-container input[type="submit"]:hover {
-  background-color: #d7000f;
+/* Style des messages d'erreur */
+.form-container .error-message {
+  color: #f50057;
+  margin-bottom: 10px;
+}
+
+/* Style des messages de succès */
+.form-container .success-message {
+  color: #00c853;
+  margin-bottom: 10px;
 }
