--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,8 +1,8 @@
 
-<div class="container">
-<div class="banner-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://media-mcetv.ouest-france.fr/wp-content/uploads/2018/05/Stranger-Things-Le-photographe-Sean-Heavey-accuse-Netflix-de-vol-de-photo-grande.jpg)">
+<div class="banner-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://c.wallhere.com/photos/f5/53/face_selective_coloring_red_eyes_black_background-7680.jpg!d)">
   My Bookings
 </div>
+<div class="container">
 
 <% @bookings.each do |booking| %>
 <%=link_to booking_path(booking) do %>
