--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container">
-<div class="banner-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://media-mcetv.ouest-france.fr/wp-content/uploads/2018/05/Stranger-Things-Le-photographe-Sean-Heavey-accuse-Netflix-de-vol-de-photo-grande.jpg)">
+<div class="banner-category" style="https://p4.wallpaperbetter.com/wallpaper/743/521/300/black-red-eyes-wallpaper-preview.jpg">
   My Bookings
 </div>
 
