--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,8 +1,8 @@
 .avatar {
-  width: 50px;
-  height: 50px;
+  width: 65px;
+  height: 65px;
   border-radius: 50%;
-  object-fit: contain;
+  object-fit:cover;
 }
 .avatar-large {
   width: 56px;
