--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,15 +7,17 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <%= link_to image_tag("https://fontmeme.com/permalink/230530/170bf3ae46730e6e8ec16769d77bf82e.png"), root_path %>
-
+    <%# <%= link_to image_tag("https://fontmeme.com/permalink/230530/170bf3ae46730e6e8ec16769d77bf82e.png"), root_path %>
+    <%= link_to root_path do %>
+    <%= image_tag("https://fontmeme.com/permalink/230530/170bf3ae46730e6e8ec16769d77bf82e.png", style: "width: 200px; height: auto;")  %>
+    <% end %>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
-          <li class="nav-item active">
+          <li class="nav-item active mt-2">
             <%= link_to "Home", root_path, class: "nav-link" %>
           </li>
-          <li class="nav-item">
+          <li class="nav-itemn mt-2 me-2">
             <%= link_to "Bookings", dashboards_path, class: "nav-link" %>
           </li>
           <li class="nav-item dropdown">
