--- a/app/assets/stylesheets/components/_form_airbnb.scss
+++ b/app/assets/stylesheets/components/_form_airbnb.scss
@@ -4,6 +4,7 @@
   margin: 0 auto;
   padding: 20px;
   height: 300px;
+  color: black;
   box-shadow: 0 0 15px rgba(196, 12, 12, 0.69);
   background-color: #f7f7f7;
   border: 1px solid #ddd;
@@ -28,7 +29,7 @@
   width: 100%;
   padding: 10px;
   background-color: transparent;
-  background-image: url('https://media.istockphoto.com/id/113494458/fr/photo/feu-isol%C3%A9-sur-fond-noir.jpg?s=612x612&w=0&k=20&c=X7bmZoA0IggGE6-WdqrEfzaLTIlqgIlG2vecunwmvWs=');
+  background-image: url('https://us.123rf.com/450wm/amadeus542/amadeus5421512/amadeus542151200127/49148718-dangerus-yeux-mal%C3%A9fiques-sur-fond-noir.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
