modif-case-login

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -30,6 +30,11 @@
   filter: grayscale(100%);
 }
 
+.custom-dropdown-item {
+  background-color: #100f0f; /* Définir la couleur de fond personnalisée */
+  color: #f50303; /* Définir la couleur du texte personnalisée */
+  font-size: 13px;
+}
 
 // Offset size of navbar on Index
 .margin-top-index {
