--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,10 +22,10 @@
           <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <%= image_tag "https://imgr.cineserie.com/2022/04/stranger-things-season-4-upside-1.jpeg?imgeng=/f_jpg/cmpr_0/w_660/h_370/m_cropbox&ver=1", class: "avatar", alt: "dropdown menu" %>
           </a>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Action", "#", class: "dropdown-item" %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+            <div class="dropdown-menu dropdown-menu-end custom-dropdown-item" aria-labelledby="navbarDropdown">
+              <%= link_to "Action", "#", class: "dropdown-item custom-dropdown-item"%>
+              <%= link_to "Another action", "#", class: "dropdown-item custom-dropdown-item" %>
+              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item custom-dropdown-item" %>
             </div>
           </li>
         <% else %>
