--- a/app/views/flats/new.html.erb
+++ b/app/views/flats/new.html.erb
@@ -6,5 +6,6 @@
   <%= f.input :description %>
   <%= f.input :price %>
   <%= f.input :max_people %>
+  <%= f.input :photo, as: :file %>
   <%= f.submit %>
 <% end %>
