--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -8,7 +8,7 @@
       <% @flats.each do |flat| %>
       <div class="card-category">
         <div >
-          <img class="card-img-top" src="<%=flat.image_url%>" alt="">
+          <%= cl_image_tag flat.photo.key, height: 300, width: 400, crop: :fill, class: "card-img-top" %>
         </div>
         <div class="d-flex justify-content-between end">
           <div class="p-3 mb-0">
