--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,6 +18,9 @@
           <li class="nav-item">
             <%= link_to "Bookings", dashboards_path, class: "nav-link" %>
           </li>
+          <li class="nav-item btn-create-flat">
+            <%= link_to "Create your flat", new_flat_path, class: "nav-link" %>
+          </li>
           <li class="nav-item dropdown">
           <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <%= image_tag "https://imgr.cineserie.com/2022/04/stranger-things-season-4-upside-1.jpeg?imgeng=/f_jpg/cmpr_0/w_660/h_370/m_cropbox&ver=1", class: "avatar", alt: "dropdown menu" %>
