--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -65,7 +65,7 @@
 
 // style body
 body {
-  min-height: 100vh;
+  // max-height: 100vh;
   background-color: black;
   color: white;
 }
@@ -77,7 +77,7 @@ html {
 
 .app-content {
   width: 100%;
-  height: 80vh;
+  max-height: 80vh;
   flex: 1;
   margin-bottom: 60px;
 }
