--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -23,4 +23,9 @@
       <%= render 'form', flat: @flat, booking: @booking %>
     </div>
   </div>
+  <div style="width: 100%; height: 600px;"
+    data-controller="map"
+    data-map-marker-value="<%= @marker.to_json %>"
+    data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
 </div>
