--- a/app/assets/stylesheets/ghost.css
+++ b/app/assets/stylesheets/ghost.css
@@ -1,20 +1,26 @@
-.ghost {
+
+
+#centered-image {
+  width: 100px; /* Taille initiale de l'image */
+  height: 100px;
   position: absolute;
-  top: 60;
-  left: -100px; /* initial position */
-  width: 300px;
-  height: 300px;
-  background-image: url('ghost-image.png'); /* chemin vers l'image du fantôme */
-  background-color: transparent;
-  background-size: cover;
-  animation: ghostAnimation 5s linear infinite;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: all 2s;
 }
 
-@keyframes ghostAnimation {
-  0% {
-    transform: translateX(-100px); /* départ de la gauche */
-  }
-  100% {
-    transform: translateX(calc(100vw + 100px)); /* traverse toute la largeur de la page */
-  }
+#centered-image.enlarged {
+  width: 1200px; /* Taille agrandie de l'image */
+  height: 1200px;
+}
+
+#centered-image.hidden {
+  opacity: 0; /* Opacité nulle pour cacher l'image */
+}
+
+#centered-image.fade-out {
+  transition: opacity 1s;
+  opacity: 0; /* Opacité nulle pour cacher l'image */
 }
