--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -25,7 +25,6 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
-
 .search-bar {
   display: flex;
   align-items: center;
@@ -38,12 +37,13 @@
 }
 
 .search-bar input[type="text"] {
-  flex-grow: 1;
+  flex-grow: 1 !important;
   border: none;
   padding: 5px;
   font-size: 16px;
   border-radius: 5px;
   color: black;
+  width: 60%;
 }
 
 .search-bar button {
