--- a/app/assets/stylesheets/components/_card_booking.scss
+++ b/app/assets/stylesheets/components/_card_booking.scss
@@ -7,6 +7,15 @@
   color: black;
 }
 
+.map{
+  width: 100%;
+  height: 330px;
+  margin-top: 20px;
+  box-shadow: 0 0 30px rgba(196, 12, 12, 0.69);
+  border-radius: 10px;
+  padding: 20px;
+}
+
 .title-resa {
   text-align: center;
 }
