--- a/app/views/flats/_marker.html.erb
+++ b/app/views/flats/_marker.html.erb
@@ -1,1 +1,1 @@
-<%= image_tag "ghost-image.png", height: 30, width: 30, alt: "Logo" %>
+<%# <%= image_tag "ghost-image.png", height: 30, width: 30, alt: "Logo" %> %>
