--- a/app/views/pages/myhouses.html.erb
+++ b/app/views/pages/myhouses.html.erb
@@ -9,6 +9,7 @@
       <div class="card-category">
         <div >
           <%= cl_image_tag flat.photo.key, height: 300, width: 400, crop: :fill, class: "card-img-top" %>
+          <%= link_to "X", flat_path(flat), data: { turbo_method: :delete } %>
         </div>
         <div class="d-flex justify-content-between end">
           <div class="p-3 mb-0">
@@ -41,6 +42,9 @@
       <strong>Arrival:</strong> <%= booking.start_date%> <br>
       <strong>Departure:</strong> <%= booking.end_date%> <br>
       <strong>Total Price:</strong> <%= (booking.end_date - booking.start_date).to_i %> x <%= booking.flat.price.to_i%> € = <%= ((booking.end_date - booking.start_date).to_i * booking.flat.price).to_i  %>€
+      <%= link_to "Accept",  %>
+      <%= link_to "Reject",  %>
+
       </p>
     </div>
   </div>
