--- a/app/views/pages/myhouses.html.erb
+++ b/app/views/pages/myhouses.html.erb
@@ -39,12 +39,16 @@
     <div class="booking-product-infos">
       <h2><%= booking.flat.name %></h2>
       <p>
-      <strong>Arrival:</strong> <%= booking.start_date%> <br>
-      <strong>Departure:</strong> <%= booking.end_date%> <br>
-      <strong>Total Price:</strong> <%= (booking.end_date - booking.start_date).to_i %> x <%= booking.flat.price.to_i%> € = <%= ((booking.end_date - booking.start_date).to_i * booking.flat.price).to_i  %>€
-      <%= link_to "Accept",  %>
-      <%= link_to "Reject",  %>
-
+        <strong>Arrival:</strong> <%= booking.start_date%> <br>
+        <strong>Departure:</strong> <%= booking.end_date%> <br>
+        <strong>Total Price:</strong> <%= (booking.end_date - booking.start_date).to_i %> x <%= booking.flat.price.to_i%> € = <%= ((booking.end_date - booking.start_date).to_i * booking.flat.price).to_i  %>€
+        <p>Status: <%= booking.status %></p>
+        <% if booking.status != "accepted" %>
+          <%= link_to "Accept", accept_booking_path(booking), data: { turbo_method: :patch } %>
+        <% end %>
+        <% if booking.status != "refused" %>
+          <%= link_to "Refuse", refuse_booking_path(booking), data: { turbo_method: :patch } %>
+        <% end %>
       </p>
     </div>
   </div>
