--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,7 +25,7 @@
           </li>
           <li class="nav-item dropdown">
           <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= image_tag "https://imgr.cineserie.com/2022/04/stranger-things-season-4-upside-1.jpeg?imgeng=/f_jpg/cmpr_0/w_660/h_370/m_cropbox&ver=1", class: "avatar", alt: "dropdown menu" %>
+            <%= cl_image_tag current_user.photo.key, class: "avatar", alt: "dropdown menu" %>
           </a>
             <div class="dropdown-menu dropdown-menu-end custom-dropdown-item" aria-labelledby="navbarDropdown">
               <%= link_to "My houses", myhouses_path, class: "dropdown-item custom-dropdown-item"%>
