--- a/app/assets/stylesheets/components/_card_booking.scss
+++ b/app/assets/stylesheets/components/_card_booking.scss
@@ -1,10 +1,11 @@
 .card-trip-booking {
   overflow: hidden;
-  background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
   width: 700px;
   margin: auto;
-  color: black;
+  background-color: black;
+  box-shadow: 0 0 30px rgba(196, 12, 12, 0.69);
+  border-radius: 10px;
+  color: white;
 }
 
 .map{
