--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,7 +1,10 @@
 
 <div id="maDiv" class="fade-in fireworks">
+<%= javascript_include_tag 'custom' %>
 <%= javascript_include_tag 'ghost' %>
-  <h1 class="title-resa">Votre réservation</h1>
+<%= javascript_include_tag 'scrollSound' %>
+
+  <h1 class="title-resa">Your reservation</h1>
 
 
     <div class="card-trip-booking" >
@@ -13,6 +16,7 @@
       </div>
         <div>
           <h2> <%= @booking.flat.name %> </h2>
+          <%# <button id="playSoundButton">Jouer le son</button> %>
           <p>Address: <%= @booking.flat.address %> </p>
           <p>--------------- </p>
           <p> <%= @booking.flat.description %> </p>
@@ -21,11 +25,18 @@
           <p> </p>
           <p> Date de départ : <%= @booking.end_date %> </p>
           <p>--------------- </p>
-          <p> Statut : <%= @booking.status %> </p>
+              <% if @booking.status == "accepted" %>
+                <p>Statut:</p><span style="color: green;"><%= @booking.status %></span>
+              <% elsif @booking.status == "refused"  %>
+                <p>Statut:</p><span style="color: red;"><%= @booking.status %></span>
+              <% else %>
+                <p>Statut:</p><span style="color: yellow;"><%= @booking.status %></span>
+              <% end %>
         </div>
-        <h2 class="card-trip-pricing-booking"> <%= @booking.flat.price %> </h2>
+        <h2 class="card-trip-pricing-booking"> <%= @booking.flat.price.to_i %>€ </h2>
         <img src="https://static.cnews.fr/sites/default/files/styles/image_750_422/public/2nfuf6u63rclboxnb3wss5mvw4_62d969f27ee0e_0.jpg?itok=TykdQPKY" class="card-trip-user-booking avatar-bordered" />
       </div>
     </div>
 </div>
-<script src="script.js"></script>
+
+<script src="/assets/custom.js"></script>
