--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -19,7 +19,7 @@
     </div>
 
     <div class="form-container col-4">
-      <p>Rentrez vos disponibilités</p>
+      <p class="btn-ghost" style="color: white; text-align: center">Choose dates</p>
       <%= render 'form', flat: @flat, booking: @booking %>
       <div class="map"
         data-controller="map"
